syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "EchoSphere.UserMessagesApi.Grpc";

package user_messages;

service MessagesService {
	rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);

	rpc GetUserMessages (GetUserMessagesRequest) returns (GetUserMessagesResponse);
}

message SendMessageRequest {
	string from_user_id = 1;
	string to_user_id = 2;
	string text = 3;
}

message SendMessageResponse {
	int64 id = 1;
}

message GetUserMessagesRequest {
	string from_user_id = 1;
	string to_user_id = 2;
}

message UserMessageDto {
	int64 id = 1;
	string text = 2;
}

message GetUserMessagesResponse {
	repeated UserMessageDto messages = 1;
}